--- a/README
+++ b/README
@@ -1,18 +1,5 @@
 # Maze Generator
-This is simple maze generator using pygame as render system.
+This is simple maze generator using pygame.
 ## Keys:
 - 'ESCAPE': terminate window
 - 'R': Regenerate maze
-## Installation
-1. Create environment: 
-```Shell
-python -m virtualenv .\venv
-```
-2. Install requirements: 
-```Shell
-python -m pip install -r .\requirements
-```
-3. Run 
-```Shell
-python .\pg-maze-generator\main.py
-```
